// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelector getLanguageChangeAction should return an action to go to a single event if there is an event is selected 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "eventId": "1",
    "language": "de",
  },
  "type": "EVENTS",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to categories 1`] = `
Object {
  "payload": Object {
    "categoryPath": undefined,
    "city": "augsburg",
    "language": "de",
  },
  "type": "CATEGORIES",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to categories redirect if a category is selected 1`] = `"augsburg/de/willkommen"`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to disclaimer 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "language": "de",
  },
  "type": "DISCLAIMER",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to events 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "eventId": undefined,
    "language": "de",
  },
  "type": "EVENTS",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to extras 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "extraAlias": "sprungbrett",
    "language": "de",
  },
  "type": "EXTRAS",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return an action to go to search 1`] = `
Object {
  "payload": Object {
    "city": "augsburg",
    "language": "de",
  },
  "type": "SEARCH",
}
`;

exports[`LanguageSelector getLanguageChangeAction should return null if a language of a category is not available 1`] = `null`;

exports[`LanguageSelector should render a HeaderLanguageSelectorItem if it is a header action item 1`] = `
<Translate(HeaderLanguageSelectorItem)
  activeItemCode="en"
  selectorItems={
    Array [
      SelectorItemModel {
        "_code": "de",
        "_href": "/augsburg/de/disclaimer",
        "_name": "Deutsch",
      },
      SelectorItemModel {
        "_code": "en",
        "_href": "/augsburg/en/disclaimer",
        "_name": "English",
      },
      SelectorItemModel {
        "_code": "ar",
        "_href": "/augsburg/ar/disclaimer",
        "_name": "Arabic",
      },
    ]
  }
/>
`;

exports[`LanguageSelector should render a normal Selector if it is not a header action item 1`] = `
<Selector
  activeItemCode="en"
  items={
    Array [
      SelectorItemModel {
        "_code": "de",
        "_href": "/augsburg/de/disclaimer",
        "_name": "Deutsch",
      },
      SelectorItemModel {
        "_code": "en",
        "_href": "/augsburg/en/disclaimer",
        "_name": "English",
      },
      SelectorItemModel {
        "_code": "ar",
        "_href": "/augsburg/ar/disclaimer",
        "_name": "Arabic",
      },
    ]
  }
  verticalLayout={true}
/>
`;
